--- a/.github/workflows/github-actions-pull-request.yml
+++ b/.github/workflows/github-actions-pull-request.yml
@@ -1,8 +1,8 @@
 name: CI to Docker Hub
 on:
   push:
-    tags:
-      - "v*.*"
+    branches: [ main ]
+
 jobs:
 
   build:
@@ -23,12 +23,13 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
-      - name: Login to Docker Hub
+      
+      if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and push
         id: docker_build
@@ -38,7 +39,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/java-student-service:latest
+          tags: ghcr.io/${{ github.repository_owner }}/java-student-service:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
