--- a/.github/workflows/github-actions-pull-request.yml
+++ b/.github/workflows/github-actions-pull-request.yml
@@ -23,13 +23,14 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      
-      if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
+            
+      - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
+          uses: docker/login-action@v1
+          with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and push
         id: docker_build
