--- a/.github/workflows/github-actions-pull-request.yml
+++ b/.github/workflows/github-actions-pull-request.yml
@@ -1,4 +1,4 @@
-name: CI to Docker Hub
+name: Pull request using Ghcr
 on:
   push:
     branches: [ main ]
@@ -24,7 +24,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
       
-      - name: Login to Docker Hub
+      - name: Login to Ghcr.io
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
